--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!-- Cipher Puzzle Content -->
         <div id="cipher-puzzle">
-            <p>Cipher Text: <span id="cipher-text">Hbd lv d jnvbqy xmtc!</span></p>
+            <p>Cipher Text: <span id="cipher-text">Cymeef xo pwue ftetqay qey!</span></p>
             <p>Your Answer: <input type="text" id="user-answer" placeholder="Type your answer here"></p>
             <button onclick="checkAnswer()">Check Answer</button>
             <p id="result"></p>
@@ -98,7 +98,7 @@
           var userAnswer = document.getElementById("user-answer").value.toLowerCase();
 
           // Check if the answer is correct
-          if (userAnswer === "hbd is a joyful day!") {
+          if (userAnswer === "Cheers to your special day!") {
               document.getElementById("result").innerHTML = "Congratulations! You've solved the puzzle!";
 
               // Redirect to a different page after a brief delay (e.g., 2 seconds)
