--- a/success_page.html
+++ b/success_page.html
@@ -70,7 +70,7 @@
         <p>Welcome to the Birthday Cipher Challenge! To continue the celebration, I have a fun word puzzle for you, Arianne. Unscramble the word below:</p>
 
         <!-- Replace the scrambled word below with a new one -->
-        <p>Scrambled Word: <strong id="heat">teah</strong></p>
+        <p>Scrambled Word: <strong id="birthday">bryaitdh</strong></p>
 
         <input type="text" id="user-answer" placeholder="Type your answer here">
         <button onclick="runGame()">Play Game</button>
@@ -86,7 +86,7 @@
             console.log("User Answer:", userAnswer);
 
             // Replace the logic below with your server-side validation
-            if (userAnswer === "heat") {
+            if (userAnswer === "birthday") {
                 // Redirect to success page if the answer is correct
                 window.location.href = "success_page0.html";
             } else {
